--- a/CopyTranslater/CopyTranslater.vcxproj.filters
+++ b/CopyTranslater/CopyTranslater.vcxproj.filters
@@ -49,4 +49,7 @@
       <Filter>Ressourcendateien</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
